@@ -1,12 +1,12 @@
 package com.skillsync.notification_service.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
+import com.skillsync.notification_service.client.UserServiceClient;
 import com.skillsync.notification_service.dto.Mapper;
 import com.skillsync.notification_service.dto.NotificationResponseDTO;
 import com.skillsync.notification_service.entity.Notification;
@@ -26,6 +26,7 @@ public class NotificationService {
     private final NotificationRepository notificationRepository;
     private final EmailService emailService;
     private final Mapper mapper;
+    private final UserServiceClient userServiceClient;
 
     public void createNotification(Long userId, NotificationType type, String message) {
         // Save notification to DB
@@ -35,11 +36,10 @@ public class NotificationService {
         notification.setMessage(message);
         notificationRepository.save(notification);
 
-        // TODO: replace with userServiceClient.getUserEmail(userId) later
-        String userEmail = "iamsteel9166@gmail.com";
+        String userEmail = userServiceClient.getUserEmail(userId);
         try {
             emailService.sendEmail(userEmail, type.name(), message);
-            log.info("Email notificaiton has sent to user userId={}: {}", userId);
+            log.info("Email notification sent to userId={}", userId);
         } catch (EmailSendException e) {
             log.warn("Email notification skipped for userId={}: {}", userId, e.getMessage());
         }
@@ -49,7 +49,7 @@ public class NotificationService {
         return notificationRepository.findAllByUserIdOrderByCreatedAtDesc(userId)
                 .stream()
                 .map(mapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void markAsRead(Long notificationId) {
